[package]
name = "png_encryption"
version = "0.1.0"
edition = "2021"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0.1"
clap = { version = "4.2.5", features = ["derive"] }
slint = "1.3.2"

[build-dependencies]
slint-build="1.3.2"
